<resources>
    <string name="app_name">deliveryuesgrp14</string>
    <string name="title_activity_alumno_menu">AlumnoMenuActivity</string>
    <string name="title_activity_nota_menu">NotaMenuActivity</string>
    <string name="title_activity_materia_menu">MateriaMenuActivity</string>
    <string name="title_activity_alumno_insertar">AlumnoInsertarActivity</string>
    <string name="title_activity_alumno_eliminar">AlumnoEliminarActivity</string>
    <string name="title_activity_alumno_actualizar">AlumnoActualizarActivity</string>
    <string name="title_activity_alumno_consultar">AlumnoConsultarActivity</string>
    <string name="title_activity_nota_insertar">NotaInsertarActivity</string>
    <string name="title_activity_nota_eliminar">NotaEliminarActivity</string>
    <string name="title_activity_nota_actualizar">NotaActualizarActivity</string>
    <string name="title_activity_nota_consultar">NotaConsultarActivity</string>
    <string name="title_activity_materia_insertar">MateriaInsertarActivity</string>
    <string name="title_activity_materia_eliminar">MateriaEliminarActivity</string>
    <string name="title_activity_materia_actualizar">MateriaActualizarActivity</string>
    <string name="title_activity_materia_consultar">MateriaConsultarActivity</string>
    <string name="alumno_menu">Función a Ejecutar Alumno</string>
    <string name="nota_menu">Función a Ejecutar Nota</string>
    <string name="materia_menu">Función a Ejecutar Materia</string>
    <string name="insertar_registro">Insertar Registro</string>
    <string name="eliminar_registro">Eliminar Registro</string>
    <string name="consultar_registro">Consultar Registro</string>
    <string name="actualizar_registro">Actualizar Registro</string>
    <string name="carnet">Carnet</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="sexo">Sexo</string>
    <string name="matganadas">Materias Ganadas</string>
    <string name="insertar">Insertar</string>
    <string name="eliminar">Eliminar</string>
    <string name="eliminar2">EliminarV2</string>
    <string name="actualizar">Actualizar</string>
    <string name="consultar">Consultar</string>
    <string name="ciclo">Ciclo</string>
    <string name="notafinal">Nota Final</string>
    <string name="codmateria">Codigo</string>
    <string name="unidadesval">Unidades Valorativas</string>
    <string name="limpiar">Limpiar</string>
    <string name="codmatnota">Codigo Materia</string>
    <string name="nommateria">Nombre Materia</string>
    <string name="opciones">Opciones:</string>
    <string name="correo">Correo</string>
    <string name="nombre_user">Nombre Completo</string>
    <string name="contrasena">Contraseña</string>
    <string name="descripcion">descripcion</string>
    <string name="numero">numero</string>
    <string name="rol">Cod Rol</string>
    <string name="opcion_crud">Opciones Crud</string>
    <string name="codigo_de_categoria">Codigo de categoria</string>
    <string name="nombre_categoria">Nombre Categoria</string>
    <string name="codigo_categoria">Codigo Categoria</string>

    <string name="text_accounts">All Accounts</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="action_settings">Settings</string>
    <string name="text_hello">Hello,</string>
    <string name="text_title">Android Tutorials Hub</string>
    <string name="email">Email</string>
    <string name="contrasena_log">Contrasena</string>
    <string name="iniciar_sesion">iniciar Sesion</string>
</resources>