<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="30dip"
    android:stretchColumns="1" >
    <TableRow>
        <TextView android:text="@string/correo"/>
        <EditText
            android:id="@+id/editCorreo"
            android:inputType="text"
            android:maxLength="150" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/nombre_user" />
        <EditText
            android:id="@+id/editNombre"
            android:inputType="text"
            android:maxLength="200" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/contrasena" />
        <EditText
            android:id="@+id/editContrasena"
            android:inputType="text"
            android:maxLength="50" />
    </TableRow>


    <TableRow>
        <TextView android:text="@string/opciones" />
    </TableRow>

    <TableRow>
        <Button
            android:onClick="insertarUsuario"
            android:text="@string/insertar" />
        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiar" />
    </TableRow>
</TableLayout>