<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="30dip"
    android:stretchColumns="1" >
    <TableRow>
        <TextView android:text="@string/rol" />
        <EditText
            android:id="@+id/editRol"
            android:ems="10"
            android:inputType="number"
            />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/descripcion"/>
        <EditText
            android:id="@+id/editDescripcion"
            android:inputType="text"
            android:maxLength="150" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/numero" />
        <EditText
            android:id="@+id/editNumber"
            android:ems="10"
            android:inputType="number"
            />
    </TableRow>


    <TableRow>
        <TextView android:text="@string/opciones" />
    </TableRow>

    <TableRow>
        <Button
            android:onClick="insertarRol"
            android:text="@string/insertar" />
        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiar" />
    </TableRow>
</TableLayout>