<?xml version="1.0" encoding="utf-8"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="30dip"
    android:stretchColumns="1" >
    <TableRow>
        <TextView android:text="@string/codigo_de_categoria"/>
        <EditText
            android:id="@+id/codCategoria"
            android:inputType="number" />
    </TableRow>

    <TableRow>
        <TextView android:text="@string/nombre_categoria" />
        <EditText
            android:id="@+id/editNombre"
            android:inputType="text"
            android:maxLength="50" />
    </TableRow>

    <TableRow>
        <TextView android:text="@string/opciones" />
    </TableRow>

    <TableRow>
        <Button
            android:onClick="insertarCategoria"
            android:text="@string/insertar" />
        <Button android:onClick="limpiarTexto"
            android:text="@string/limpiar" />
    </TableRow>
</TableLayout>