<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="200dp"
    android:stretchColumns="1"
    tools:context=".MainActivity">

    <TableRow>
        <TextView
            android:textColor="@color/black"
            android:text="@string/email"/>

        <EditText
            android:id="@+id/email"
            android:inputType="textEmailAddress"
            android:importantForAutofill="no" />
    </TableRow>


    <TableRow>
        <TextView
            android:textColor="@color/black"
            android:text="@string/contrasena_log"/>
        <EditText
            android:id="@+id/password"
            android:inputType="text" />
    </TableRow>
    <TableRow>
        <Button
            android:onClick="inicarSesion"
            android:text="@string/iniciar_sesion" />
    </TableRow>

</TableLayout>